Changelog
=========

1.3 - unreleased
----------------

1.2 - 2012-03-19
----------------

- added option to specify index_name as field parameter. This is useful
  eg. for 'subjects' field which should read it's data from 'Subject'
  index. If not set, field name is used.
  [naro]

- Added InAndOutKeywordWidget which is based on z3c.form OrderedSelectWidget
  [naro]

1.1.1 - 2012-02-24
------------------

- fixed broken 1.1 release [petschki]

1.1 (2012-02-13)
----------------

- fixed unicode errors for non-ascii keyword value support [petschki]
- ui improved to keep newly entered categories on form errors [petschki]

1.0.1 (2009-09-29)
------------------

- updated setup.cfg


1.0 (2009-09-29)
----------------

* Initial release
