@@ -4,6 +4,13 @@ Changelog
 1.3 - unreleased
 ----------------
 
+- made it work in Plone 4.3: fixed a problemin vocabulary creation in 
+  combination with non-ascii.
+  [jensens]
+
+- modernized test setup 
+  [jensens]
+
 1.2 - 2012-03-19
 ----------------
 
